[gd_scene load_steps=4 format=3 uid="uid://bb5h4gftxo68h"]

[ext_resource type="Script" uid="uid://c5p5nowkpfqoe" path="res://RPG-test/PauseMenu.gd" id="1_pause"]
[ext_resource type="Texture2D" uid="uid://580v0nfbm3m8" path="res://RPG-test/sprites/bouton_test.png" id="2_bouton"]
[ext_resource type="FontFile" uid="uid://cv8fr2efk7sj" path="res://m5x7.ttf" id="3_font"]

[sub_resource type="Theme" id="Theme_1"]
default_font = ExtResource("3_font")
default_font_size = 44

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 2
script = ExtResource("1_pause")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="CenterContainer" type="CenterContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CenterContainer"]
layout_mode = 2
theme = SubResource("Theme_1")

[node name="TitleLabel" type="Label" parent="Control/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "MENU PAUSE"
horizontal_alignment = 1

[node name="ButtonsContainer" type="VBoxContainer" parent="Control/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2

[node name="ContinuerButton" type="TextureButton" parent="Control/CenterContainer/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(400, 80)
layout_mode = 2
texture_normal = ExtResource("2_bouton")
stretch_mode = 5

[node name="ContinuerLabel" type="Label" parent="Control/CenterContainer/VBoxContainer/ButtonsContainer/ContinuerButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 28
text = "CONTINUER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuestesButton" type="TextureButton" parent="Control/CenterContainer/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(400, 80)
layout_mode = 2
texture_normal = ExtResource("2_bouton")
stretch_mode = 5

[node name="QuestesLabel" type="Label" parent="Control/CenterContainer/VBoxContainer/ButtonsContainer/QuestesButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 28
text = "QUÃŠTES"
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuitterButton" type="TextureButton" parent="Control/CenterContainer/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(400, 80)
layout_mode = 2
texture_normal = ExtResource("2_bouton")
stretch_mode = 5

[node name="QuitterLabel" type="Label" parent="Control/CenterContainer/VBoxContainer/ButtonsContainer/QuitterButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 28
text = "QUITTER"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/ButtonsContainer/ContinuerButton" to="." method="_on_continuer_pressed"]
[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/ButtonsContainer/QuestesButton" to="." method="_on_quetes_pressed"]
[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/ButtonsContainer/QuitterButton" to="." method="_on_quitter_pressed"]
